--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://d29.github.io'
+baseURL = 'https://DWilson29.github.io'
 languageCode = 'en-us'
 title = 'D29 Blog'
 theme = 'mainroad'
