--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
-baseURL = 'https://DWilson29.github.io'
-languageCode = 'en-us'
-title = 'D29 Blog'
-theme = 'mainroad'
+baseurl = "/"
+title = "D Wilson Blog"
+languageCode = "en-us"
+paginate = "10" # Number of posts per page
+theme = "mainroad"
